# Boeing-Robot-24-25

./: ArduinoMotorTest  IRtest  MotorPubAUTO  MotorPubCMD  MotorSUB  PID_Motor.ino  README.md  TestArduino  controller.py
app/: package.xml  setup.py
app/app/: ar_app.py  common.py  hand_gesture.py  hand_trajectory_node.py  lidar_controller.py  line_following.py  obj_loader.py  object_tracking.py
app/launch/: ar_app_node.launch.py  hand_gesture_node.launch.py  lidar_node.launch.py  line_following_node.launch.py  object_tracking_node.launch.py  start_app.launch.py
bringup/: package.xml  setup.py
bringup/bringup/: startup_check.py
bringup/launch/: bringup.launch.py
bringup/scripts/: expand_rootfs.service  navigation.desktop  navigation.sh  slam.desktop  slam.sh  start_app_node.service
calibration/: package.xml  setup.py
calibration/calibration/: calibrate_angular.py  calibrate_linear.py
calibration/config/: bk.yaml  imu_calib.yaml
calibration/launch/: angular_calib.launch.py  linear_calib.launch.py
driver/controller/: package.xml  setup.py
driver/ros_robot_controller/: package.xml  setup.cfg  setup.py
driver/ros_robot_controller_msgs/: CMakeLists.txt  package.xml
driver/sdk/: package.xml  setup.cfg  setup.py
example/: package.xml  setup.py
example/config/: automatic_pick_roi.yaml  bridge_plane_distance.yaml  color_sorting_roi.yaml  garbage_classification_roi.yaml  line_follow_clean_roi.yaml  object_classification_plane_distance.yaml  plane_distance.yaml  roi.yaml
interfaces/: CMakeLists.txt  mapping_rules.yaml
interfaces/msg/: ColorsInfo.msg  LineROI.msg  ObjectInfo.msg  ROI.msg
interfaces/srv/: GetPose.srv  SetColorRGBA.srv  SetLineROI.srv  SetPose.srv  SetPose2D.srv  SetStringList.srv
multi/: package.xml  setup.cfg  setup.py
multi/config/: lidar_filters_config_g4.yaml  lidar_filters_config_ld19.yaml
navigation/: package.xml  setup.py
peripherals/: package.xml  setup.cfg  setup.py
slam/: package.xml  setup.py
yolov5_ros2/: setup.py
(+190 files in other folders)
